--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@colyseus/testing": "^0.14.21",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
+    "@types/matter-js": "^0.17.7",
     "@types/mocha": "^8.2.3",
     "copyfiles": "^2.4.1",
     "mocha": "^9.0.2",
@@ -34,6 +35,7 @@
     "@colyseus/monitor": "^0.14.20",
     "colyseus": "^0.14.20",
     "cors": "^2.8.5",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "matter-js": "^0.18.0"
   }
 }
