--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.1",
     "@types/matter-js": "^0.17.7",
     "@types/mocha": "^8.2.3",
+    "@types/pixi.js": "^5.0.0",
     "copyfiles": "^2.4.1",
     "mocha": "^9.0.2",
     "rimraf": "^2.7.1",
