--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "name": "ts-game-network-colyseus",
   "version": "1.0.0",
   "description": "npm init template for bootstrapping an empty Colyseus project",
-  "main": "lib/index.js",
   "scripts": {
-    "start": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "start:dev": "concurrently \"yarn watch:client\" \"yarn watch:server\"",
+    "watch:server": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "watch:client": "nodemon --exec \"yarn build:client\"",
     "loadtest": "colyseus-loadtest loadtest/example.ts --room my_room --numClients 2",
     "build:server": "tsc && node node_modules/copyfiles/copyfiles package.json ./lib && node node_modules/copyfiles/copyfiles arena.env ./lib",
     "build:client": "cd client && tsc && cd .. && node node_modules/copyfiles/copyfiles --error ./client/lib/**/* ./client/static/**/* ./client/index.html ./lib",
@@ -25,8 +26,10 @@
     "@types/matter-js": "^0.17.7",
     "@types/mocha": "^8.2.3",
     "@types/pixi.js": "^5.0.0",
+    "concurrently": "^7.1.0",
     "copyfiles": "^2.4.1",
     "mocha": "^9.0.2",
+    "nodemon": "^2.0.16",
     "rimraf": "^2.7.1",
     "ts-node": "^8.1.0",
     "ts-node-dev": "^1.0.0-pre.63",
@@ -39,5 +42,17 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "matter-js": "^0.18.0"
+  },
+  "nodemonConfig": {
+    "verbose": true,
+    "ext": "ts,html,json",
+    "delay": 2000,
+    "ignore": [
+      "node_modules/**/*",
+      "client/lib/"
+    ],
+    "watch": [
+      "client/"
+    ]
   }
 }
