--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rimraf": "^2.7.1",
     "ts-node": "^8.1.0",
     "ts-node-dev": "^1.0.0-pre.63",
+    "tsimportlib": "^0.0.3",
     "typescript": "^4.6.4"
   },
   "dependencies": {
@@ -39,6 +40,7 @@
     "colyseus": "^0.14.20",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "matter-js": "^0.18.0"
+    "matter-js": "^0.18.0",
+    "rapier2d-node": "^0.7.7"
   }
 }
