feat: send server input

--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "watch:client": "cd client && yarn watch",
     "loadtest": "colyseus-loadtest loadtest/example.ts --room my_room --numClients 2",
     "build:server": "tsc && node node_modules/copyfiles/copyfiles package.json ./lib && node node_modules/copyfiles/copyfiles arena.env ./lib",
-    "build:client": "node node_modules/copyfiles/copyfiles --error ./client/lib/**/* ./client/static/**/* ./client/index.html ./lib",
+    "build:client": "cd client && yarn bundle:dev",
     "build": "yarn clean && yarn build:server && yarn build:client",
-    "clean": "node node_modules/rimraf/bin lib client/lib",
+    "clean": "node node_modules/rimraf/bin lib",
     "test": "mocha --require ts-node/register test/**_test.ts --exit --timeout 15000",
-    "schema-codegen": "schema-codegen src/rooms/schema/* --ts --output ./client/typing",
+    "schema-codegen": "schema-codegen src/rooms/schema/* --ts --output ./client/generated",
     "list": "tsc --listFiles"
   },
   "author": "",
