--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@colyseus/testing": "^0.14.21",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
+    "@types/lodash": "^4.14.182",
     "@types/matter-js": "^0.17.7",
     "@types/mocha": "^8.2.3",
     "concurrently": "^7.1.0",
